--- a/pelicula/src/App.css
+++ b/pelicula/src/App.css
@@ -87,3 +87,37 @@
 .footer p {
   color: #ccc;
 }
+/* Agrega estilos CSS para mejorar la apariencia del reproductor de video */
+.selected-movie video {
+  width: 100%;
+  max-width: 800px; /* Ajusta el ancho máximo según tus preferencias */
+  display: block;
+  margin: 0 auto;
+}
+
+/* Estiliza los controles del reproductor de video */
+.selected-movie video::-webkit-media-controls {
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 5px;
+}
+
+.selected-movie video::-webkit-media-controls-play-button,
+.selected-movie video::-webkit-media-controls-volume-slider {
+  display: none;
+}
+
+.selected-movie video::-webkit-media-controls-current-time-display,
+.selected-movie video::-webkit-media-controls-time-remaining-display,
+.selected-movie video::-webkit-media-controls-fullscreen-button {
+  color: white;
+  padding: 5px;
+}
+
+.selected-movie video::-webkit-media-controls-enclosure {
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+  align-items: center;
+}
